--- a/css/works.css
+++ b/css/works.css
@@ -60,6 +60,7 @@ a:hover {
     background-color: rgba(20, 20, 20, 0.6);
     -webkit-backdrop-filter: blur(10px);
     backdrop-filter: blur(10px);
+    z-index: 10;
 }
 
 .titleMe {
