--- a/css/aboutme.css
+++ b/css/aboutme.css
@@ -44,24 +44,6 @@ a:hover {
     transition: 0.3s;
 }
 
-.optionsLang {
-    margin: 0 0 0 50px;
-    background-color: var(--first-color);
-    color: white;
-    border: 1px solid gray;
-    border-radius: 15px;
-    padding: 4px 7px;
-}
-
-.optionsLangMobile {
-    margin: 0 0 0 250px;
-    background-color: var(--first-color);
-    color: white;
-    border: 1px solid gray;
-    border-radius: 15px;
-    padding: 4px 7px;
-}
-
 .panel2 {
     display: flex;
     flex-direction: row;
@@ -81,8 +63,8 @@ a:hover {
     z-index: 10;
 }
 
-.titleMe {
-    margin: 0 0 0 200px;
+.titleMe:link, .titleMe:visited {
+    margin-left: 300px;
     color: transparent;
     -webkit-background-clip: text;
     background-clip: text;
@@ -90,32 +72,66 @@ a:hover {
     text-decoration: none;
     font-weight: bold;
     font-size: 30px;
-    cursor: default;
 }
 
-.panelHome {
+.titleMe:hover {
+    color: transparent;
+    background-image: linear-gradient(to right bottom, orange, rgb(132, 0, 255));
+}
+
+.panelHome:link, .panelHome:visited {
     margin-left: 500px;
-    font-size: 20px;
-}
-
-.panelAboutme:link, .panelAboutme:visited {
-    margin-left: 30px;
-    font-size: 20px;
+    font-size: 18px;
     color: gray;
 }
 
-.panelAboutme:hover {
+.panelAboutme {
+    margin-left: 600px;
+    font-size: 18px;
     color: gray;
 }
 
 .panelWorks {
-    margin-left: 30px;
-    font-size: 20px;
+    margin-left: 20px;
+    font-size: 18px;
 }
 
 .panelContacts {
-    margin-left: 30px;
-    font-size: 20px;
+    margin-left: 20px;
+    font-size: 18px;
+}
+
+.panelLogin {
+    margin-left: 200px;
+    font-size: 18px;
+    padding: 5px;
+    color: white;
+    border: 1px solid white;
+    border-radius: 10px;
+}
+
+.panelLogin:hover {
+    color: var(--first-color);
+    background-color: white;
+    transition: all 0.5s;
+}
+
+.optionsLang {
+    margin-left: 20px;
+    background-color: var(--first-color);
+    color: white;
+    border: 1px solid gray;
+    border-radius: 10px;
+    padding: 4px 7px;
+}
+
+.optionsLangMobile {
+    margin: 0 0 0 100px;
+    background-color: var(--first-color);
+    color: white;
+    border: 1px solid gray;
+    border-radius: 15px;
+    padding: 4px 7px;
 }
 
 .lng-text-info {
