--- a/css/aboutme.css
+++ b/css/aboutme.css
@@ -79,13 +79,13 @@ a:hover {
     background-image: linear-gradient(to right bottom, orange, rgb(132, 0, 255));
 }
 
-.panelHome:link, .panelHome:visited {
+/* .panelHome:link, .panelHome:visited {
     margin-left: 500px;
     font-size: 18px;
     color: gray;
-}
+} */
 
-.panelAboutme {
+.panelAboutme:link, .panelAboutme:visited {
     margin-left: 600px;
     font-size: 18px;
     color: gray;
