--- a/css/contact.css
+++ b/css/contact.css
@@ -1,4 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+:root {
+    --first-color: rgb(20, 20, 20);
+    --second-color: rgb(140, 0, 255);
+    --third-color: rgb(15, 15, 15);
+}
 
 body {
     margin: 0;
